exports[`test renders loading version 1`] = `
<div>
  <Meta
    image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg"
    title="Give" />
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div
      className="card soft-top soft-sides"
      style={
        Object {
          "backgroundColor": "#6BAC43",
          "color": "#FFFFFF",
        }
      }>
      <h4>
        You\'re Giving Is Working
      </h4>
      <p>
        We are experiencing some glitches with receipts being sent out via email, but rest assured, you\'re gifts are being received and processed correctly. Thank you for being patient with us while we straighten out the situation with our transaction receipts.
      </p>
    </div>
  </div>
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div
      className="text-left soft-top@anchored hard-left@lap-and-up soft-half-bottom soft@anchored ">
      <div
        className="soft-double-ends@palm-wide-and-up soft-ends@palm">
        <div
          className="one-whole text-center soft-ends">
          <Spinner
            styles={
              Object {
                "height": "40px",
                "width": "40px",
              }
            } />
        </div>
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@portable soft-double-sides@anchored">
    <h4
      className="soft soft-double-ends text-center@lap-and-up flush-bottom">
      Learn more about our campaigns...
    </h4>
    <div
      className="grid">
      <div
        className="one-whole text-center soft-ends">
        <Spinner
          styles={
            Object {
              "height": "40px",
              "width": "40px",
            }
          } />
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders not alive version 1`] = `
<div>
  <Meta
    image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg"
    title="Give" />
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div
      className="card soft-top soft-sides"
      style={
        Object {
          "backgroundColor": "#6BAC43",
          "color": "#FFFFFF",
        }
      }>
      <h4>
        You\'re Giving Is Working
      </h4>
      <p>
        We are experiencing some glitches with receipts being sent out via email, but rest assured, you\'re gifts are being received and processed correctly. Thank you for being patient with us while we straighten out the situation with our transaction receipts.
      </p>
    </div>
  </div>
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div
      className="text-left soft-top@anchored hard-left@lap-and-up soft-half-bottom soft@anchored ">
      <div
        className="soft-double-ends@palm-wide-and-up soft-ends@palm">
        <Offline />
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@portable soft-double-sides@anchored">
    <h4
      className="soft soft-double-ends text-center@lap-and-up flush-bottom">
      Learn more about our campaigns...
    </h4>
    <div
      className="grid">
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test" />
      </div>
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test" />
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <Meta
    image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg"
    title="Give" />
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div
      className="card soft-top soft-sides"
      style={
        Object {
          "backgroundColor": "#6BAC43",
          "color": "#FFFFFF",
        }
      }>
      <h4>
        You\'re Giving Is Working
      </h4>
      <p>
        We are experiencing some glitches with receipts being sent out via email, but rest assured, you\'re gifts are being received and processed correctly. Thank you for being patient with us while we straighten out the situation with our transaction receipts.
      </p>
    </div>
  </div>
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div
      className="text-left soft-top@anchored hard-left@lap-and-up soft-half-bottom soft@anchored ">
      <div
        className="soft-double-ends@palm-wide-and-up soft-ends@palm">
        <Connect(CartContainer)
          accounts={
            Array [
              Object {
                "image": null,
                "images": Array [],
                "name": "test",
                "summary": "test summary",
              },
              Object {
                "image": null,
                "images": Array [],
                "name": "test",
                "summary": "test summary",
              },
            ]
          } />
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@portable soft-double-sides@anchored">
    <h4
      className="soft soft-double-ends text-center@lap-and-up flush-bottom">
      Learn more about our campaigns...
    </h4>
    <div
      className="grid">
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test" />
      </div>
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test" />
      </div>
    </div>
  </div>
</div>
`;
